--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
